# runtrail

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  SPEC.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/runtrail/: main.go
design/runtrail-ui/: README.md
design/runtrail-ui/chats/: chat1.md
design/runtrail-ui/project/: index.html
docs/: architecture.md  cli.md  releasing.md  schema.md  sdk.md
examples/: experiment_lr.py  quickstart.py
internal/cli/: diff.go  export.go  helpers.go  import.go  ls.go  rm.go  root.go  show.go  ui.go
internal/config/: config.go
internal/diff/: diff.go  diff_test.go
internal/domain/: domain.go
internal/server/: handlers.go  io.go  server.go  server_test.go  stop_unix.go  stop_windows.go  watcher.go  ws.go
internal/store/: import.go  metrics.go  mutations_test.go  parquet.go  projects.go  runs.go  schema.sql  store.go
internal/version/: version.go
internal/webui/: embed.go
scripts/: build.sh  release.sh
sdk/: README.md  pyproject.toml
sdk/runtrail/: __init__.py  _ids.py  _queue.py  _run.py  _store.py
sdk/runtrail/_capture/: __init__.py  env.py  git.py  hardware.py  resources.py  source.py
sdk/tests/: test_init.py  test_nfr.py  test_phase1.py
src/: app.jsx  components.jsx  data.jsx  live-run.jsx  project-settings.jsx  run-detail.jsx  run-list.jsx
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts  types.ts
web/src/components/: atoms.test.tsx  atoms.tsx  charts.tsx  icons.tsx  overlays.tsx
web/src/lib/: format.test.ts  format.ts  router.test.ts  router.ts
web/src/pages/: Diff.tsx  LiveRun.tsx  RunDetail.tsx  RunList.tsx  Settings.tsx
(+3 files in other folders)
